# window_window_manager_lite

./: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json
frameworks/ims/: input_event_client_proxy.h  input_event_listener_proxy.cpp
frameworks/wms/: lite_proxy_surface.cpp  lite_proxy_surface.h  lite_proxy_windows_manager.cpp  lite_win_requestor.cpp  lite_win_requestor.h  lite_wm_requestor.cpp  lite_wm_requestor.h
interfaces/innerkits/: input_event_listener_proxy.h  lite_wm_type.h
services/ims/: input_event_client_proxy.cpp  input_event_distributer.h  input_event_hub.cpp  input_event_hub.h  input_manager_service.h
services/wms/: lite_win.cpp  lite_win.h  lite_wm.cpp  lite_wms.cpp  lite_wms.h  wms.cpp
test/: BUILD.gn  sample_window.cpp
