# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/graphic/config.gni")

group("window_manager_lite_test") {
  if (ohos_build_type == "debug") {
    deps = [
      ":sample_auto_ui",
      ":sample_ui",
      ":sample_window",
    ]
  }
}

if (ohos_build_type == "debug") {
  executable("sample_ui") {
    sources = [ "sample_ui.cpp" ]
    include_dirs = [
      "//foundation/arkui/ui_lite/frameworks",
      "//foundation/arkui/ui_lite/test/framework",
    ]
    ldflags = [
      "-lstdc++",
      "-lpthread",
      "-Wl,-rpath-link=$ohos_root_path/$root_out_dir",
    ]

    deps = [
      "//foundation/arkui/ui_lite/test/framework:lite_graphic_test_framework",
      "//foundation/graphic/graphic_utils_lite:lite_graphic_hals",
      "//foundation/window/window_manager_lite:wms_client",
      "//third_party/freetype:freetype",
    ]
    output_dir = "$root_out_dir/dev_tools"
  }

  executable("sample_auto_ui") {
    sources = [ "sample_ui.cpp" ]
    include_dirs = [
      "//foundation/arkui/ui_lite/frameworks",
      "//foundation/arkui/ui_lite/test/framework",
    ]
    ldflags = [
      "-lstdc++",
      "-lpthread",
      "-Wl,-rpath-link=$ohos_root_path/$root_out_dir",
    ]
    deps = [
      "//foundation/arkui/ui_lite/test/framework:auto_framework",
      "//foundation/graphic/graphic_utils_lite:lite_graphic_hals",
      "//foundation/window/window_manager_lite:wms_client",
      "//third_party/freetype:freetype",
    ]

    output_dir = "$root_out_dir/dev_tools"
  }

  executable("sample_window") {
    sources = [
      "//foundation/arkui/ui_lite/test/framework/common/ui_text_language.cpp",
      "sample_window.cpp",
    ]
    include_dirs = [
      "//foundation/arkui/ui_lite/frameworks",
      "//foundation/arkui/ui_lite/test/framework",
      "//foundation/graphic/surface_lite/interfaces/kits",
    ]
    ldflags = [
      "-lstdc++",
      "-lpthread",
      "-Wl,-rpath-link=$ohos_root_path/$root_out_dir",
    ]

    deps = [
      "//foundation/arkui/ui_lite:ui_lite",
      "//third_party/freetype:freetype",
    ]
    output_dir = "$root_out_dir/dev_tools"
  }
}
